@@ -35,7 +35,8 @@ roles_directory = {
         'members_field': 'members',
         'title_field': 'role',
         'search_substring_fields': ['role'],
-        'acl_access_roles': 'Manager',
+        'acl_directory_view_roles': 'Manager',
+        'acl_entry_view_roles': 'Manager',
         },
     }
 
